[gd_scene load_steps=6 format=2]

[ext_resource path="res://arrows/ui.svg" type="Texture" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]
[ext_resource path="res://arrows/up.svg" type="Texture" id=3]
[ext_resource path="res://arrows/down.svg" type="Texture" id=4]
[ext_resource path="res://arrows/right.svg" type="Texture" id=5]

[node name="Control" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -276.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer"]
margin_right = 276.0
margin_bottom = 276.0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_right = 276.0
margin_bottom = 266.0
custom_constants/separation = 100
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 266.0
margin_bottom = 266.0
custom_constants/separation = 10
alignment = 1

[node name="Control2" type="Control" parent="Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TouchScreenButton" parent="Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Control2"]
modulate = Color( 1, 1, 1, 0.352941 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )
visibility_mode = 1

[node name="Control" type="Control" parent="Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 138.0
margin_right = 266.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
size_flags_vertical = 3

[node name="right" type="TouchScreenButton" parent="Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Control"]
modulate = Color( 1, 1, 1, 0.352941 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 5 )
visibility_mode = 1

[node name="MarginContainer3" type="MarginContainer" parent="Control/HBoxContainer"]
margin_left = 280.0
margin_right = 1458.0
margin_bottom = 276.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Control/HBoxContainer"]
margin_left = 1462.0
margin_right = 1600.0
margin_bottom = 276.0
custom_constants/margin_right = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/MarginContainer2"]
margin_right = 128.0
margin_bottom = 266.0
custom_constants/separation = 10
alignment = 2

[node name="Control2" type="Control" parent="Control/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )

[node name="up" type="TouchScreenButton" parent="Control/HBoxContainer/MarginContainer2/VBoxContainer/Control2"]
modulate = Color( 1, 1, 1, 0.352941 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
visibility_mode = 1

[node name="Control" type="Control" parent="Control/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 138.0
margin_right = 128.0
margin_bottom = 266.0
rect_min_size = Vector2( 128, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down" type="TouchScreenButton" parent="Control/HBoxContainer/MarginContainer2/VBoxContainer/Control"]
modulate = Color( 1, 1, 1, 0.352941 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 4 )
visibility_mode = 1
[connection signal="pressed" from="Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Control2/left" to="." method="_on_left_button" binds= [ true ]]
[connection signal="released" from="Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Control2/left" to="." method="_on_left_button" binds= [ false ]]
[connection signal="pressed" from="Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Control/right" to="." method="_on_right_button" binds= [ true ]]
[connection signal="released" from="Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Control/right" to="." method="_on_right_button" binds= [ false ]]
[connection signal="pressed" from="Control/HBoxContainer/MarginContainer2/VBoxContainer/Control2/up" to="." method="_on_up_button" binds= [ true ]]
[connection signal="released" from="Control/HBoxContainer/MarginContainer2/VBoxContainer/Control2/up" to="." method="_on_up_button" binds= [ false ]]
[connection signal="pressed" from="Control/HBoxContainer/MarginContainer2/VBoxContainer/Control/down" to="." method="_on_down_button" binds= [ true ]]
[connection signal="released" from="Control/HBoxContainer/MarginContainer2/VBoxContainer/Control/down" to="." method="_on_down_button" binds= [ false ]]
